RESOLVED FIXED238259
[Nicosia] Images in webkit.org/blog/ don't show up with threaded rendering
https://bugs.webkit.org/show_bug.cgi?id=238259
Summary [Nicosia] Images in webkit.org/blog/ don't show up with threaded rendering
Alice Mikhaylenko
Reported 2022-03-23 07:21:39 PDT
For example with https://webkit.org/blog/12445/new-webkit-features-in-safari-15-4/ With GTK3 or WEBKIT_NICOSIA_PAINTING_THREADS=0 it works fine.
Attachments
Patch (5.08 KB, patch)
2022-05-05 08:23 PDT, Miguel Gomez
no flags
johnfactotum1
Comment 1 2022-03-31 23:36:02 PDT
Seems to be caused by `filter: brightness(1)` on the `.preserve-color` class. In fact, all elements with any CSS filter applied seem to be invisible. For example, on https://developer.mozilla.org/en-US/docs/Web/CSS/filter. Almost all of the examples show up blank. The exceptions are the two "SVG equivalents" of `drop-shadow()`, which do show up but apparently without any filter effect. With GTK 3 or WEBKIT_NICOSIA_PAINTING_THREADS=0 everything works as expected.
Miguel Gomez
Comment 2 2022-05-05 08:23:43 PDT
EWS
Comment 3 2022-05-06 00:44:36 PDT
Committed r293883 (250341@main): <https://commits.webkit.org/250341@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458874 [details].
Note You need to log in before you can comment on or make changes to this bug.