[Nicosia] Images in webkit.org/blog/ don't show up with threaded rendering https://bugs.webkit.org/show_bug.cgi?id=238259

Reviewed by Carlos Garcia Campos.

Implement Nicosia::CairoOperationRecorder::drawFilteredImageBuffer(), which is required
to render images that have CSS filters applied.

* platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.cpp:
(Nicosia::CairoOperationRecorder::drawFilteredImageBuffer):
* platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.h:

Canonical link: https://commits.webkit.org/250341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293883 268f45cc-cd09-0410-ab3c-d52691b4dbfc